Remove use of deprecated integer constructor (#89)
`new Integer(int)` is deprecated in Java 9